# decapod

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  SECURITY.md  constitution.domain_brief.linked.json  constitution.schema.json
.cargo/: config.toml
.decapod/: OVERRIDE.md  README.md  config.toml
.decapod/contracts/: README_CONTRACTS.json
.decapod/governance/: plan.json
.github/scripts/: reflex-selective-test.sh  selective-test.sh
.github/workflows/: ci.yml  constitution-sync.yml  decapod-validate.yml  docs.yml  docs_autosync.yml  docs_sync.yml  release.yml
architecture/: ALGORITHMS.md  CACHING.md  CLOUD.md  CONCURRENCY.md  COST_OPTIMIZATION.md  DATA.md  ENCRYPTION.md  EVENT_DRIVEN.md  FRONTEND.md  MEMORY.md  NETWORKING.md  OBSERVABILITY.md  SECURITY.md  TESTING_STRATEGY.md  UI.md  WEB.md
assets/: constitution.json  constitution.schema.json
constitution/architecture/: ALGORITHMS.md  API_DESIGN.md  AUTH.md  CI_CD_PIPELINES.md  CLOUD.md  CODING_STANDARDS.md  COMPLIANCE.md  CONCURRENCY.md  CONTAINERS.md  COST_OPTIMIZATION.md  DATA.md  DATABASE.md  DISTRIBUTED_SYSTEMS.md  DR.md  FRONTEND.md  GRAPHQL.md  GRPC.md  INFRASTRUCTURE.md  KNOWLEDGE_BASE.md  KUBERNETES.md  MEMORY.md  MESSAGING.md  METRICS.md  MICROSERVICES.md  OBSERVABILITY.md  PERFORMANCE.md  SCALING.md  SECRETS.md  SECURITY.md  UI.md  WEB.md
constitution/core/: DECAPOD.md  GAPS.md  (+7 more)
docs/: index.md
src/: cli.rs  lib.rs
tests/: agent_rpc_suite.rs  canonical_evidence_gate.rs  chaos_replay.rs  cli_contract_enforcement.rs  cli_contracts.rs  cloud_backend_storage.rs  commit_often_gate.rs  constitution_claims.rs  container_workspaces_disabled.rs  context_capsule_cli.rs  context_capsule_rpc.rs  context_capsule_schema.rs  contract_conformance.rs  daemonless_lifecycle.rs  doc_alignment.rs  entrypoint_correctness.rs  eval_kernel.rs  examples_interop.rs  external_tracker_compatibility.rs  gatling.rs  git_init_regression.rs  git_push_pr_gate.rs  group_broker.rs  infer_precision.rs  init_ci_scaffolding.rs  init_config_behavior.rs  init_validate_green_field.rs  kernel_phase4_regression.rs  knowledge_promotion_cli.rs  lcm_determinism.rs  release_check_policy.rs  release_workflow_policy.rs  skill_governance_kernel.rs  spec_conformance.rs  state_commit_phase_gate.rs  substrate_integrity.rs  todo_enforcement.rs  todo_rebuild_compat.rs  validate_optional_artifact_gates.rs  validate_termination.rs  (+7 more)
(+167 files in other folders)
